--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
     <head>
         <!--general stuff-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="widht=device-widht, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="robots" content="index,follow">
 
         <!--title-->
@@ -27,26 +27,40 @@
         <link rel="icon" type="image/png" sizes="96x96" href="">
         <link rel="icon" type="image/png" sizes="192x192" href="">
 
-        <!--style-->
+        <!--styles-->
         <link rel="stylesheet" href="app/css/style.css">
         <link rel="stylesheet" href="app/css/responsive.css">
 
-        <!--scripts-->
-        <script src="app/js/main.js" type="text/javascript"></script>
-        <script src="app/js/cookies.js" type="text/javascript"></script>
+        <!--bootstrap styles-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
         <!--fonts-->
 
     </head>
     <body>
         <header>
-
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="#Über uns">Über uns</a></li>
+                    <li><a href="#Wieso wir">Wieso wir</a></li>
+                    <li><a href="#Kontakt">Kontakt</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             
         </main>
         <footer>
 
+            <!--scripts-->
+            <script src="app/js/main.js" type="text/javascript"></script>
+            <script src="app/js/cookies.js" type="text/javascript"></script>
+
+            <!--bootstrap scripts-->
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         </footer>
     </body>
 </html>
