--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -4,7 +4,7 @@
         <!--general stuff-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="robots" content="index,follow">
 
         <!--title-->
@@ -32,18 +32,17 @@
         <link rel="stylesheet" href="app/css/responsive.css">
 
         <!--bootstrap styles-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
         <!--fonts-->
 
     </head>
     <body>
         <header>
-            <nav>
-                <ul>
-                    <li><a href="">Home</a></li>
+            <nav class="navbar">
+                <ul class="navlist">
                     <li><a href="#Über uns">Über uns</a></li>
-                    <li><a href="#Wieso wir">Wieso wir</a></li>
+                    <li><a href="#Deienstleistungen">Dienstleistungen</a></li>
+                    <li><a href="#Wieso wir">Wieso Wir</a></li>
                     <li><a href="#Kontakt">Kontakt</a></li>
                 </ul>
             </nav>
@@ -52,15 +51,21 @@
             
         </main>
         <footer>
+            <ul class="social_icon">
+                <li><a href=""></a><ion-icon name="logo-facebook"></ion-icon></li>
+                <li><a href=""></a><ion-icon name="logo-twitter"></ion-icon></li>
+                <li><a href=""></a><ion-icon name="logo-linkedin"></ion-icon></li>
+                <li><a href=""></a><ion-icon name="logo-instagram"></ion-icon></li>
+            </ul>
 
             <!--scripts-->
             <script src="app/js/main.js" type="text/javascript"></script>
             <script src="app/js/cookies.js" type="text/javascript"></script>
 
             <!--bootstrap scripts-->
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
         </footer>
+            <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
