--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -40,10 +40,10 @@
         <header>
             <nav class="navbar">
                 <ul class="navlist">
-                    <li><a href="#Über uns">Über uns</a></li>
-                    <li><a href="#Deienstleistungen">Dienstleistungen</a></li>
-                    <li><a href="#Wieso wir">Wieso Wir</a></li>
-                    <li><a href="#Kontakt">Kontakt</a></li>
+                    <li><a href="#Über uns"></a></li>
+                    <li><a href="#Deienstleistungen"></a></li>
+                    <li><a href="#Wieso wir"></a></li>
+                    <li><a href="#Kontakt"></a></li>
                 </ul>
             </nav>
         </header>
