--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -51,12 +51,26 @@
             
         </main>
         <footer>
+            <div class="waves">
+                <div class="wave" id="wave1"></div>
+                <div class="wave" id="wave2"></div>
+                <div class="wave" id="wave3"></div>
+                <div class="wave" id="wave4"></div>
+            </div>
             <ul class="social_icon">
                 <li><a href=""></a><ion-icon name="logo-facebook"></ion-icon></li>
                 <li><a href=""></a><ion-icon name="logo-twitter"></ion-icon></li>
                 <li><a href=""></a><ion-icon name="logo-linkedin"></ion-icon></li>
                 <li><a href=""></a><ion-icon name="logo-instagram"></ion-icon></li>
             </ul>
+            <ul class="menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Team</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+            <p>©2021 Startup_LL | All Rights Reserved</p>
 
             <!--scripts-->
             <script src="app/js/main.js" type="text/javascript"></script>
