--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -58,10 +58,10 @@
                 <div class="wave" id="wave4"></div>
             </div>
             <ul class="social_icon">
-                <li><a href=""></a><ion-icon name="logo-facebook"></ion-icon></li>
-                <li><a href=""></a><ion-icon name="logo-twitter"></ion-icon></li>
-                <li><a href=""></a><ion-icon name="logo-linkedin"></ion-icon></li>
-                <li><a href=""></a><ion-icon name="logo-instagram"></ion-icon></li>
+                <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
+                <li><a href=""><ion-icon name="logo-twitter"></ion-icon></a></li>
+                <li><a href=""><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
             </ul>
             <ul class="menu">
                 <li><a href="">Home</a></li>
@@ -79,7 +79,6 @@
             <!--bootstrap scripts-->
 
         </footer>
-            <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-            <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     </body>
 </html>
