--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -30,6 +30,7 @@
         <!--styles-->
         <link rel="stylesheet" href="app/css/style.css">
         <link rel="stylesheet" href="app/css/responsive.css">
+        <link rel="stylesheet" href="app/ccs/login.css">
 
         <!--bootstrap styles-->
 
