--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -39,12 +39,26 @@
     </head>
     <body>
         <header>
-            <nav class="navbar">
-                <ul class="navlist">
-                    <li><a href="#Über uns"></a></li>
-                    <li><a href="#Deienstleistungen"></a></li>
-                    <li><a href="#Wieso wir"></a></li>
-                    <li><a href="#Kontakt"></a></li>
+            <nav>
+                <div class="logo">
+                    <h4>Startup_LL</h4>
+                </div>
+                <ul class="nav_links">
+                    <li>
+                        <a href="#Home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#Contact">About</a>
+                    </li>
+                    <li>
+                        <a href="#Services">Services</a>
+                    </li>
+                    <li>
+                        <a href="#Team">Team</a>
+                    </li>
+                    <li>
+                        <a href="#Contact">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -59,17 +73,35 @@
                 <div class="wave" id="wave4"></div>
             </div>
             <ul class="social_icon">
-                <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
-                <li><a href=""><ion-icon name="logo-twitter"></ion-icon></a></li>
-                <li><a href=""><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li>
+                    <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+                </li>
+                <li>
+                    <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
+                </li>
+                <li>
+                    <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+                </li>
+                <li>
+                    <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+                </li>
             </ul>
             <ul class="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Team</a></li>
-                <li><a href="">Contact</a></li>
+                <li>
+                    <a href="#Home">Home</a>
+                </li>
+                <li>
+                    <a href="#Contact">About</a>
+                </li>
+                <li>
+                    <a href="#Services">Services</a>
+                </li>
+                <li>
+                    <a href="#Team">Team</a>
+                </li>
+                <li>
+                    <a href="#Contact">Contact</a>
+                </li>
             </ul>
             <p>©2021 Startup_LL | All Rights Reserved</p>
 
