--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -39,71 +39,19 @@
     </head>
     <body>
         <header>
-            <nav>
-                <div class="logo">
-                    <h4>Startup_LL</h4>
-                </div>
-                <ul class="nav_links">
-                    <li>
-                        <a href="#Home">Home</a>
-                    </li>
-                    <li>
-                        <a href="#Contact">About</a>
-                    </li>
-                    <li>
-                        <a href="#Services">Services</a>
-                    </li>
-                    <li>
-                        <a href="#Team">Team</a>
-                    </li>
-                    <li>
-                        <a href="#Contact">Contact</a>
-                    </li>
-                </ul>
+            <nav>            
+                <a href="#Home">Home</a>
+                <a href="#About us">About us</a>
+                <a href="#Team">Team</a>
+                <a href="#Services">Services</a>
+                <a href="#Contact">Contact</a>
+                <div class="animation home_navbar"></div>
             </nav>
         </header>
         <main>
             
         </main>
         <footer>
-            <div class="waves">
-                <div class="wave" id="wave1"></div>
-                <div class="wave" id="wave2"></div>
-                <div class="wave" id="wave3"></div>
-                <div class="wave" id="wave4"></div>
-            </div>
-            <ul class="social_icon">
-                <li>
-                    <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
-                </li>
-                <li>
-                    <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
-                </li>
-                <li>
-                    <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
-                </li>
-                <li>
-                    <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
-                </li>
-            </ul>
-            <ul class="menu">
-                <li>
-                    <a href="#Home">Home</a>
-                </li>
-                <li>
-                    <a href="#Contact">About</a>
-                </li>
-                <li>
-                    <a href="#Services">Services</a>
-                </li>
-                <li>
-                    <a href="#Team">Team</a>
-                </li>
-                <li>
-                    <a href="#Contact">Contact</a>
-                </li>
-            </ul>
-            <p>©2021 Startup_LL | All Rights Reserved</p>
 
             <!--scripts-->
             <script src="app/js/main.js" type="text/javascript"></script>
