--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -46,6 +46,18 @@
                 <a href="#Services">Services</a>
                 <a href="#Contact">Contact</a>
                 <div class="animation home_navbar"></div>
+                <input type="checkbox" class="checkbox" id="check" />
+                <div class="content">
+                    <label class="label" for="check">
+                        <i class="fab fa-galactic-republic"></i>
+                        <i class="fab fa-rebel"></i>
+                        <div class="ball"></div>
+                    </label>
+                    <span class="image">
+                        <i class="fab fa-galactic-republic"></i>
+                        <i class="fab fa-rebel"></i>
+                    </span>
+                </div>
             </nav>
         </header>
         <main>
