added some description

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- REQUIRED META TAGS -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Learning bootstrap v5 with sass</title>
+
+    <!-- TITLE AND FAVICON -->
+    <title>Startup-LL</title>
+
+    <!-- LINK CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
+
+    <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+
+    <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -28,13 +37,13 @@
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Testimonials</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">faq</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
           <li class="nav-item"><a class="nav-link" href="#">portfolio</a></li>
           <li class="nav-item"><a class="nav-link" href="#">contact</a>
           </li>
         </ul>
         <button type="button" class="rounded-pill btn-rounded">
-          +1 728365413
+          +49 17673216265
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
@@ -53,7 +62,7 @@
       <!-- START THE CONTENT FOR THE INTRO  -->
       <div class="col-md-6 intros text-start">
         <h1 class="display-2">
-          <span class="display-2--intro">Hey!, I'm Patrick</span>
+          <span class="display-2--intro">Hey!, I'm  Jeff!</span>
           <span class="display-2--description lh-base">
             this is a multi-purpose responsive layout created with bootstrap v5. 
             (here your can place your description text)
