--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
       <!-- START THE CONTENT FOR THE INTRO  -->
       <div class="col-md-6 intros text-start">
         <h1 class="display-2">
-          <span class="display-2--intro">Hey!, I'm  Jeff!</span>
+          <span class="display-2--intro">Hey!, We're Startup-LL.</span>
           <span class="display-2--description lh-base">
-            this is a multi-purpose responsive layout created with bootstrap v5. 
-            (here your can place your description text)
+            we create your website with bootstrap from scratch so that you get the best website possible.
           </span>
         </h1>
         <button type="button" class="rounded-pill btn-rounded">Get in Touch
@@ -762,7 +761,7 @@
       <div class="row text-center text-white">
         <div class="col-12">
           <div class="footer-bottom__copyright">
-            &COPY; Copyright 2021 <a href="#">Company</a> | Created by <a href="http://codewithpatrick.com" target="_blank">Muriungi</a>
+            &COPY; Copyright 2021 <a href="#">Startup-LL</a> | Created by <a href="https://github.com/syph1000" target="_blank">Leo Fielstette</a> and <a href="https://github.com/syph1000" target="_blank">Lewin Stoff</a>
           </div>
         </div>
       </div>
@@ -783,7 +782,7 @@
     <script type="text/javascript">
       const lightbox = GLightbox({
         'touchNavigation': true,
-        'href': 'https://www.youtube.com/watch?v=J9lS14nM1xg',
+        'href': ',
         'type': 'video',
         'source': 'youtube', //vimeo, youtube or local
         'width': 900,
