updated services and footer

--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
 
   <!-- START THE CONTENT FOR THE SERVICES  -->
   <div class="container">
-    <!-- START THE MARKETING CONTENT  -->
+   <!-- START THE WEB DEVELOPMENT CONTENT  -->
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
         <div class="services__content">
-          <div class="icon d-block fas fa-paper-plane"></div>
-          <h3 class="display-3--title mt-1">Marketing</h3>
+          <div class="icon d-block fas fa-code"></div>
+          <h3 class="display-3--title mt-1">Web development</h3>
           <p class="lh-lg">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
              doloremque autem quibusdam blanditiis harum alias hic accusantium 
@@ -187,21 +187,21 @@
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__pic">
-          <img src="images/services/service-1.png" alt="marketing illustration" class="img-fluid">
+          <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
         </div>
       </div>
     </div>
-    <!-- START THE WEB DEVELOPMENT CONTENT  -->
+    <!-- START THE CLOUD HOSTING CONTENT  -->
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
         <div class="services__pic">
-          <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
+          <img src="images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
         <div class="services__content">
-          <div class="icon d-block fas fa-code"></div>
-          <h3 class="display-3--title mt-1">web development</h3>
+          <div class="icon d-block fas fa-cloud-upload-alt"></div>
+          <h3 class="display-3--title mt-1">cloud hosting</h3>
           <p class="lh-lg">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
              doloremque autem quibusdam blanditiis harum alias hic accusantium 
@@ -761,7 +761,7 @@
       <div class="row text-center text-white">
         <div class="col-12">
           <div class="footer-bottom__copyright">
-            &COPY; Copyright 2021 <a href="#">Startup-LL</a> | Created by <a href="https://github.com/syph1000" target="_blank">Leo Fielstette</a> and <a href="https://github.com/syph1000" target="_blank">Lewin Stoff</a>
+            &COPY; Copyright 2021 <a href="https://github.com/startup-LL">Startup-LL</a> | Created by <a href="https://github.com/syph1000" target="_blank">Leo Fielstette</a> and <a href="https://github.com/trystrikex" target="_blank">Lewin Stoff</a>
           </div>
         </div>
       </div>
