updated some content and styles

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h1 class="display-2">
           <span class="display-2--intro">Hey!, We're Startup-LL.</span>
           <span class="display-2--description lh-base">
-            we create your website with bootstrap from scratch so that you get the best website possible.
+            Do you Want a Professional Website? We will build it for you with Bootstrap!
           </span>
         </h1>
         <button type="button" class="rounded-pill btn-rounded">Get in Touch
@@ -151,7 +151,7 @@
       <div class="col-md-6 border-right">
         <div class="bg-white p-3">
           <h2 class="fw-bold text-capitalize text-center">
-            Our Services Range From Initial Design To Deployment Anywhere Anytime
+            Our Services Range From Initial Design To Deployment Anywhere and Anytime
           </h2>
         </div>
       </div>
@@ -213,29 +213,6 @@
         </div>
       </div>
     </div>
-    <!-- START THE CLOUD HOSTING CONTENT  -->
-    <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-        <div class="services__content">
-          <div class="icon d-block fas fa-cloud-upload-alt"></div>
-          <h3 class="display-3--title mt-1">cloud hosting</h3>
-          <p class="lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-             doloremque autem quibusdam blanditiis harum alias hic accusantium 
-             maxime atque ratione magni repellat?
-          </p>
-          <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
-        <div class="services__pic">
-          <img src="images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 
 <!-- ////////////////////////////////////////////////////////////////////////////////////////////////
@@ -716,40 +693,40 @@
   <div class="container mt-5">
     <div class="row text-white justify-content-center mt-3 pb-3">
       <div class="col-12 col-sm-6 col-lg-6 mx-auto">
-        <h5 class="text-capitalize fw-bold">Campany name</h5>
+        <h5 class="text-capitalize fw-bold">Startup-LL</h5>
         <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
         <p class="lh-lg">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ex obcaecati blanditiis reprehenderit ab mollitia voluptatem consectetur?
+          Do you Want a Professional Website? We will build it for you with Bootstrap!
         </p>
       </div>
       <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-        <h5 class="text-capitalize fw-bold">Products</h5>
+        <h5 class="text-capitalize fw-bold">company</h5>
         <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
         <ul class="list-inline campany-list">
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-        <h5 class="text-capitalize fw-bold">useful links</h5>
+        <h5 class="text-capitalize fw-bold">Learn More</h5>
         <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
         <ul class="list-inline campany-list">
-          <li><a href="#"> Your Account</a></li>
-          <li><a href="#">Become an Affiliate</a></li>
-          <li><a href="#">create an account</a></li>
-          <li><a href="#">Help</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Developers</a></li>
+          <li><a href="#">Legal</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
         <h5 class="text-capitalize fw-bold">contact</h5>
         <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
         <ul class="list-inline campany-list">
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
-          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="#" class="contact_footer">Tel:</a><a href=""> +49 176 73216265</a></li><li>
+          <li><a href="#" class="contact_footer">Fax:</a><a href=""> +49 123456789</a></li><li>
+          <li><a href="#" class="contact_footer">E-Mail:</a><a href=""> contact@us.com</a></li>
+          <li><a href="#">Musterstraße 123</a></li>
         </ul>
       </div>
     </div>
@@ -782,7 +759,7 @@
     <script type="text/javascript">
       const lightbox = GLightbox({
         'touchNavigation': true,
-        'href': ',
+        'href': '#',
         'type': 'video',
         'source': 'youtube', //vimeo, youtube or local
         'width': 900,
