made it looks better

--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,11 @@
 </head>
 <body>
 
-<!-- ////////////////////////////////////////////////////////////////////////////////////////
-                               START SECTION 1 - THE NAVBAR SECTION  
-/////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- NAVBAR SECTION -->
 <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.png" alt="logo image">
+        <img src="../public/images/logo.png" alt="logo image">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,23 +57,14 @@
           <li class="nav-item"><a class="nav-link" href="#contact">contact</a>
           </li>
         </ul>
-        <button type="button" class="rounded-pill btn-rounded">
-          +49 17673216265
-          <span>
-            <i class="fas fa-phone-alt"></i>
-          </span>
-        </button>
       </div>
     </div>
   </nav>
 
-<!-- /////////////////////////////////////////////////////////////////////////////////////////////////
-                            START SECTION 2 - THE INTRO SECTION  
-/////////////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- INTRO SECTION -->
 <section id="home" class="intro-section">
   <div class="container">
     <div class="row align-items-center text-white">
-      <!-- START THE CONTENT FOR THE INTRO  -->
       <div class="col-md-6 intros text-start">
         <h1 class="display-2">
           <span class="display-2--intro">Hey!, We're Startup-LL.</span>
@@ -87,17 +76,9 @@
           <span><i class="fas fa-arrow-right"></i></span>
         </button>
       </div>
-      <!-- START THE CONTENT FOR THE VIDEO -->
       <div class="col-md-6 intros text-end">
         <div class="video-box">
           <img src="images/arts/intro-section-illustration.png" alt="video illutration" class="img-fluid">
-          <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
-            <span>
-              <i class="fas fa-play-circle"></i>
-            </span>
-            <span class="border-animation border-animation--border-1"></span>
-            <span class="border-animation border-animation--border-2"></span>
-          </a>
         </div>
       </div>
     </div>
@@ -105,9 +86,8 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
 
-<!-- //////////////////////////////////////////////////////////////////////////////////////////////
-                             START SECTION 3 - THE CAMPANIES SECTION  
-////////////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- CAMPANIES SECTION -->
+<!--  
   <section id="campanies" class="campanies">
     <div class="container">
       <div class="row text-center">
@@ -115,7 +95,6 @@
         <div class="heading-line mb-5"></div>
       </div>
     </div>
-    <!-- START THE CAMPANIES CONTENT  -->
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-lg-2">
@@ -151,17 +130,15 @@
       </div>
     </div>
   </section>
+-->
 
-<!-- //////////////////////////////////////////////////////////////////////////////////////////////
-                         START SECTION 4 - THE SERVICES  
-///////////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- SERVICES SECTION -->
 <section id="services" class="services">
   <div class="container">
     <div class="row text-center">
       <h1 class="display-3 fw-bold">Our Services</h1>
       <div class="heading-line mb-1"></div>
     </div>
-  <!-- START THE DESCRIPTION CONTENT  -->
     <div class="row pt-2 pb-2 mt-0 mb-3">
       <div class="col-md-6 border-right">
         <div class="bg-white p-3">
@@ -181,11 +158,7 @@
       </div>
     </div>
   </div>
-
-  <!-- START THE CONTENT FOR THE SERVICES  -->
   <div class="container">
-
-   <!-- START THE WEB DEVELOPMENT CONTENT  -->
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
         <div class="services__content">
@@ -207,8 +180,6 @@
         </div>
       </div>
     </div>
-
-    <!-- START THE CLOUD HOSTING CONTENT  -->
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
         <div class="services__pic">
@@ -232,9 +203,7 @@
     </div>
 </section>
 
-<!-- ////////////////////////////////////////////////////////////////////////////////////////////////
-                               START SECTION 5 - THE TESTIMONIALS  
-/////////////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- TESTIMONIALS SECTION -->
 <section id="testimonials" class="testimonials">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
   <div class="container">
@@ -243,16 +212,10 @@
       <hr style="width: 100px; height: 3px; " class="mx-auto">
       <p class="lead pt-1">what our clients are saying</p>
     </div>
-
-    <!-- START THE CAROUSEL CONTENT  -->
     <div class="row align-items-center">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-
-          <!-- CAROUSEL ITEM 1 -->
           <div class="carousel-item active">
-
-            <!-- testimonials card  -->
             <div class="testimonials__card">
               <p class="lh-lg">
                 <i class="fas fa-quote-left"></i>
@@ -268,23 +231,15 @@
                 </div>
               </p>
             </div>
-
-            <!-- client picture  -->
             <div class="testimonials__picture">
               <img src="images/testimonials/client-1.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
             </div>
-
-            <!-- client name & role  -->
             <div class="testimonials__name">
               <h3>Patrick Muriungi</h3>
               <p class="fw-light">CEO & founder</p>
             </div>
           </div> 
-
-          <!-- CAROUSEL ITEM 2 -->
           <div class="carousel-item">
-
-            <!-- testimonials card  -->
             <div class="testimonials__card">
               <p class="lh-lg">
                 <i class="fas fa-quote-left"></i>
@@ -300,23 +255,15 @@
                 </div>
               </p>
             </div>
-
-            <!-- client picture  -->
             <div class="testimonials__picture">
               <img src="images/testimonials/client-2.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
             </div>
-
-            <!-- client name & role  -->
             <div class="testimonials__name">
               <h3>Joy Marete</h3>
               <p class="fw-light">Finance Manager</p>
             </div>
           </div> 
-
-          <!-- CAROUSEL ITEM 3 -->
           <div class="carousel-item">
-
-            <!-- testimonials card  -->
             <div class="testimonials__card">
               <p class="lh-lg">
                 <i class="fas fa-quote-left"></i>
@@ -332,23 +279,15 @@
                 </div>
               </p>
             </div>
-
-            <!-- client picture  -->
             <div class="testimonials__picture">
               <img src="images/testimonials/client-3.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
             </div>
-
-            <!-- client name & role  -->
             <div class="testimonials__name">
               <h3>ClaireBelle Zawadi</h3>
               <p class="fw-light">Global brand manager</p>
             </div>
           </div>
-
-          <!-- CAROUSEL ITEM 4 -->
           <div class="carousel-item">
-
-            <!-- testimonials card  -->
             <div class="testimonials__card">
               <p class="lh-lg">
                 <i class="fas fa-quote-left"></i>
@@ -364,13 +303,9 @@
                 </div>
               </p>
             </div>
-
-            <!-- client picture  -->
             <div class="testimonials__picture">
               <img src="images/testimonials/client-4.jpg" alt="client-4 picture" class="rounded-circle img-fluid">
             </div>
-
-            <!-- client name & role  -->
             <div class="testimonials__name">
               <h3>Uhuru Kenyatta</h3>
               <p class="fw-light">C.E.O & Founder</p>
@@ -389,9 +324,7 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
 
-<!-- /////////////////////////////////////////////////////////////////////////////////////////////////
-                       START SECTION 6 - THE FAQ 
-//////////////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- FAQ SECTION -->
 <section id="faq" class="faq">
   <div class="container">
     <div class="row text-center">
@@ -399,13 +332,9 @@
       <div class="heading-line"></div>
       <p class="lead">frequently asked questions, get knowledge befere hand</p>
     </div>
-
-    <!-- ACCORDION CONTENT  -->
     <div class="row mt-5">
       <div class="col-md-12">
         <div class="accordion" id="accordionExample">
-
-          <!-- ACCORDION ITEM 1 -->
           <div class="accordion-item shadow mb-3">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -418,8 +347,6 @@
               </div>
             </div>
           </div>
-
-             <!-- ACCORDION ITEM 2 -->
           <div class="accordion-item shadow mb-3">
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -432,8 +359,6 @@
               </div>
             </div>
           </div>
-
-             <!-- ACCORDION ITEM 3 -->
           <div class="accordion-item shadow mb-3">
             <h2 class="accordion-header" id="headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -446,8 +371,6 @@
               </div>
             </div>
           </div>
-
-             <!-- ACCORDION ITEM 4 -->
           <div class="accordion-item shadow mb-3">
             <h2 class="accordion-header" id="headingFour">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -466,9 +389,7 @@
   </div>
 </section>
 
-<!-- ///////////////////////////////////////////////////////////////////////////////////////////////////
-                              START SECTION 7 - THE PORTFOLIO  
-//////////////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- PORTFOLIO SECTION -->
 <section id="portfolio" class="portfolio">
   <div class="container">
     <div class="row text-center mt-5">
@@ -478,8 +399,6 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint porro temporibus distinctio.
       </p>
     </div>
-
-    <!-- FILTER BUTTONS  -->
     <div class="row mt-5 mb-4 g-3 text-center">
       <div class="col-md-12">
         <button class="btn btn-outline-primary" type="button">All</button>
@@ -488,8 +407,6 @@
         <button class="btn btn-outline-primary" type="button">mockup</button>
       </div>
     </div>
-
-    <!-- START THE PORTFOLIO ITEMS  -->
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
@@ -594,9 +511,7 @@
   </div>
 </section>
 
-<!-- /////////////////////////////////////////////////////////////////////////////////////////////////////////
-              START SECTION 8 - GET STARTED  
-/////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- CONTACT US SECTION-->
 <section id="contact" class="get-started">
   <div class="container">
     <div class="row text-center">
@@ -606,8 +521,6 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero illum architecto modi.
       </p>
     </div>
-
-    <!-- START THE CTA CONTENT  -->
     <div class="row text-white">
       <div class="col-12 col-lg-6 gradient shadow p-3">
         <div class="cta-info w-100">
@@ -652,14 +565,10 @@
   </div>
 </section>
 
-<!-- ///////////////////////////////////////////////////////////////////////////////////////////
-                           START SECTION 9 - THE FOOTER  
-///////////////////////////////////////////////////////////////////////////////////////////////-->
+<!-- FOOTER SECTION -->
 <footer class="footer">
   <div class="container">
     <div class="row">
-
-      <!-- CONTENT FOR THE MOBILE NUMBER  -->
       <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
         <div class="contact-box__icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -674,8 +583,6 @@
           <p class="contact-box__info--subtitle">  Mon-Fri 9am-6pm</p>
         </div>
       </div> 
-
-      <!-- CONTENT FOR EMAIL  -->
       <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
         <div class="contact-box__icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -691,8 +598,6 @@
           <p class="contact-box__info--subtitle">Online support</p>
         </div>
       </div>
-      
-      <!-- CONTENT FOR LOCATION  -->
       <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
         <div class="contact-box__icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -711,14 +616,18 @@
       </div>
     </div>
   </div>
-
-  <!-- START THE SOCIAL MEDIA CONTENT  -->
   <div class="footer-sm" style="background-color: #212121;">
     <div class="container">
       <div class="row py-4 text-center text-white">
-        <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
-          connect with us on social media
-        </div>
+        <div class="col-lg-5 col-md-6 mb-4 mb-md-0"></div>
+      </div>
+    </div>
+  </div>
+  <div class="container mt-5">
+    <div class="row text-white justify-content-center mt-3 pb-3">
+      <div class="col-12 col-sm-6 col-lg-6 mx-auto">
+        <h5 class="text-capitalize fw-bold">Startup-LL</h5>
+        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
         <div class="col-lg-7 col-md-6">
           <a href="#"><i class="fab fa-facebook"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
@@ -726,19 +635,6 @@
           <a href="#"><i class="fab fa-linkedin"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- START THE CONTENT FOR THE CAMPANY INFO -->
-  <div class="container mt-5">
-    <div class="row text-white justify-content-center mt-3 pb-3">
-      <div class="col-12 col-sm-6 col-lg-6 mx-auto">
-        <h5 class="text-capitalize fw-bold">Startup-LL</h5>
-        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
-        <p class="lh-lg">
-          Do you Want a Professional Website? We will build it for you with Bootstrap!
-        </p>
       </div>
       <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
         <h5 class="text-capitalize fw-bold">company</h5>
@@ -772,8 +668,6 @@
       </div>
     </div>
   </div>
-
-  <!-- START THE COPYRIGHT INFO  -->
   <div class="footer-bottom pt-5 pb-5">
     <div class="container">
       <div class="row text-center text-white">
@@ -792,22 +686,5 @@
   <i class="fas fa-chevron-up"></i>
 </a>
 
-
-
-   
-    <script src="assets/vendors/js/glightbox.min.js"></script>
-
-    <script type="text/javascript">
-      const lightbox = GLightbox({
-        'touchNavigation': true,
-        'href': '#',
-        'type': 'video',
-        'source': 'youtube', //vimeo, youtube or local
-        'width': 900,
-        'autoPlayVideos': 'true',
-});
-    
-    </script>
-     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
