--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="../public/images/logo.png" alt="logo image">
+        <img src="../src/media/logo.png" alt="logo image">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,7 @@
       </div>
       <div class="col-md-6 intros text-end">
         <div class="video-box">
-          <img src="images/arts/intro-section-illustration.png" alt="video illutration" class="img-fluid">
+          <img src="../src/media/arts/intro-section-illustration.png" alt="video illutration" class="img-fluid">
         </div>
       </div>
     </div>
@@ -176,14 +176,14 @@
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__pic">
-          <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
+          <img src="../src/media/services/service-2.png" alt="web development illustration" class="img-fluid">
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
         <div class="services__pic">
-          <img src="images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+          <img src="../src/media/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
@@ -232,7 +232,7 @@
               </p>
             </div>
             <div class="testimonials__picture">
-              <img src="images/testimonials/client-1.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+              <img src="../src/media/testimonials/client-1.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
             </div>
             <div class="testimonials__name">
               <h3>Patrick Muriungi</h3>
@@ -256,7 +256,7 @@
               </p>
             </div>
             <div class="testimonials__picture">
-              <img src="images/testimonials/client-2.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
+              <img src="../src/media/testimonials/client-2.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
             </div>
             <div class="testimonials__name">
               <h3>Joy Marete</h3>
@@ -280,7 +280,7 @@
               </p>
             </div>
             <div class="testimonials__picture">
-              <img src="images/testimonials/client-3.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
+              <img src="../src/media/testimonials/client-3.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
             </div>
             <div class="testimonials__name">
               <h3>ClaireBelle Zawadi</h3>
@@ -304,7 +304,7 @@
               </p>
             </div>
             <div class="testimonials__picture">
-              <img src="images/testimonials/client-4.jpg" alt="client-4 picture" class="rounded-circle img-fluid">
+              <img src="../src/media/testimonials/client-4.jpg" alt="client-4 picture" class="rounded-circle img-fluid">
             </div>
             <div class="testimonials__name">
               <h3>Uhuru Kenyatta</h3>
@@ -410,7 +410,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-1.jpg" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-1.jpg" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 1</h4>
@@ -421,7 +421,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-2.jpg" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-2.jpg" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 2</h4>
@@ -432,7 +432,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-3.jpg" alt="portfolio 3 image" title="portfolio 3 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-3.jpg" alt="portfolio 3 image" title="portfolio 3 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 3</h4>
@@ -443,7 +443,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 4</h4>
@@ -454,7 +454,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-5.jpg" alt="portfolio 5 image" title="portfolio 5 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-5.jpg" alt="portfolio 5 image" title="portfolio 5 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 5</h4>
@@ -465,7 +465,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-6.jpg" alt="portfolio 6 image" title="portfolio 6 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-6.jpg" alt="portfolio 6 image" title="portfolio 6 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 6</h4>
@@ -476,7 +476,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-7.jpg" alt="portfolio 7 image" title="portfolio 7 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-7.jpg" alt="portfolio 7 image" title="portfolio 7 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 7</h4>
@@ -487,7 +487,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-8.jpg" alt="portfolio 8 image" title="portfolio 8 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-8.jpg" alt="portfolio 8 image" title="portfolio 8 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 8</h4>
@@ -498,7 +498,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-9.jpg" alt="portfolio 9 image" title="portfolio 9 picture" class="img-fluid">
+          <img src="../src/media/portfolio/portfolio-9.jpg" alt="portfolio 9 image" title="portfolio 9 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project name goes here 9</h4>
